Fix accessibility issues, and a few content tweaks
Accessibility issues found via http://wave.webaim.org:

* Improved text contrast in several places
* Fixed some duplicate alt tags
* Fixed a heading hierarchy bug
* Labelled a form element

Other changes:

* Removed the color swatches, they were flagged for contrast and looked
  out of place to me. If these were supposed to be part of the press-
  kit stuff, we should either put them in those files, or add some text
  on the page explaining why they're there.
* Added a (temporary) link back to TheKinrar's instance wizard, to be
  removed once this one has feature parity (Since right now not having
  a link there looks like a regression of features from the user POV)

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -167,12 +167,12 @@ $phi: 1.6180339887498948482;
     margin-bottom: 20px;
 
     strong {
-      color: $vibrant;
+      color: $lightest;
     }
   }
 
   p {
-    color: darken($lighter, 18%);
+    color: $lighter;
     font-size: 18px;
     margin-bottom: 26px;
   }
@@ -222,10 +222,10 @@ $phi: 1.6180339887498948482;
   padding: 30px 0;
   padding-bottom: 50px;
 
-  h3 {
+  h2 {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
-    color: lighten($darkest, 30%);
+    color: lighten($darkest, 40%);
     text-align: center;
     margin-bottom: 20px;
   }
@@ -331,7 +331,7 @@ $phi: 1.6180339887498948482;
 
     strong {
       font-weight: 500;
-      color: $lighter;
+      color: $lightest;
     }
   }
 
@@ -348,7 +348,7 @@ $phi: 1.6180339887498948482;
     font-family: 'Montserrat', sans-serif;
     font-size: 21px;
     margin-bottom: 20px;
-    color: $lighter;
+    color: $lightest;
   }
 }
 
@@ -401,7 +401,7 @@ $phi: 1.6180339887498948482;
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 20px;
-    color: $lighter;
+    color: $lightest;
   }
 
   p {
