--- a/src/scss/Credits.scss
+++ b/src/scss/Credits.scss
@@ -9,7 +9,7 @@
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 20px;
-    color: $lighter;
+    color: $lightest;
   }
 
   p {
