--- a/src/scss/HowItWorks.scss
+++ b/src/scss/HowItWorks.scss
@@ -7,7 +7,7 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 21px;
     margin-bottom: 20px;
-    color: $lighter;
+    color: $lightest;
   }
 
   h3 {
@@ -15,7 +15,7 @@
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 20px;
-    color: $lighter;
+    color: $lightest;
   }
 
   p {
